--- a/src/components/pages/home/home.module.scss
+++ b/src/components/pages/home/home.module.scss
@@ -1,10 +1,5 @@
 
 
-* {
-    padding: 0;
-    margin: 0;
-    /* overflow: hidden; */
-  }
   
   .wrap {
     display: flex;
@@ -22,17 +17,8 @@
     box-shadow: 2px 2px 6px -2px rgba(0,0,0,0.75);
   }
   
-  /* .wrap2::before{
-    content: '';
-    background-color: black;
-    z-index: 0;
-    height:80px;
-    position: absolute;
-    width:100%;
-  } */
-  
-  .btns{
-    margin-top: 56px;
+  .btns_container{
+    margin-top: 48px;
   }
   #mycanvas {
     display: block;
