applied Craco and customize theme of Ant Design

--- a/src/components/pages/translator/translator.module.scss
+++ b/src/components/pages/translator/translator.module.scss
@@ -1,8 +1,8 @@
 .translator {
 }
-.translator__container {
+.translator_container {
 }
-.translator__video {
+.translator_video {
 }
-.translator__subtitles {
+.translator_subtitles {
 }
