update craco config

--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -1,11 +1,10 @@
 // Reference https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
-
 // -------- Colors -----------
 // Primary
-$primary-color: #08CCCA;
+$primary-color: #000;
 
 // Error
-// $error-color: #E95D5D;
-
+// $error-color: #000;
+$link-color: #000;
 
 // -------- Buttons -----------
